syntax = "proto3";

package api;

option java_package = "com.banzaicloud.pipeline.api";

import "google/protobuf/timestamp.proto";

// The Process service definition.
service Process {
  // Adds a process entry
  rpc Log(ProcessEntry) returns (ProcessEntryResponse);
}

// The request message containing the process name.
message ProcessEntry {
  string id = 1;
  string parentId = 2;
  uint32 orgId = 3;
  string name = 4;
  enum ResourceType {
    CLUSTER = 0;
  }
  string resourceType = 5;
  string resourceId = 6;
  enum Status {
    SUCCESS = 0;
    FAILURED = 1;
  }
  string status = 7;
  google.protobuf.Timestamp startedAt = 8;
  google.protobuf.Timestamp finishedAt = 9;
}

// The response message containing the greetings
message ProcessEntryResponse {}
